kubernetes/apps/base/ai/ai/inference/service-mesh.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qwen38-mesh
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: qwen38
    role: head
